--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,5 @@
 [deps]
-Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-Quantus = "8d90210c-fca9-40c0-841d-bb2fe6438b55"
+CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
+MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
+PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
