--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,11 @@ uuid = "60f7988a-8219-4a13-b11a-dc7de4eda32c"
 authors = ["Group D"]
 version = "1.0.0-DEV"
 
+[deps]
+CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
+
 [compat]
+CondaPkg = "0.2.29"
+PythonCall = "0.9.25"
 julia = "1.11"
