--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,9 @@ uuid = "8d90210c-fca9-40c0-841d-bb2fe6438b55"
 authors = ["Karim Shawky <k.shawky@campus.tu-berlin.de>"]
 version = "1.0.0-DEV"
 
+[deps]
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
+
 [compat]
+PythonCall = "0.9.25"
 julia = "1.11"
